[project]
name = "tron-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.14.0",
    "fastapi>=0.115.6",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.0",
    "psycopg2>=2.9",
    "pytest>=8.3.4",
    "sqlalchemy>=2.0.36",
    "tronpy>=0.5.0",
    "uvicorn>=0.34.0",
    "responses>=0.25.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]
